// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form/> Login form snapshot 1`] = `
<div>
  <h1>
    Login
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="email"
        onChange={undefined}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="password"
        onChange={undefined}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn-primary btn-lg btn-block"
      type="sumit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`<Form/> Register form snapshot 1`] = `
<div>
  <h1>
    Register
  </h1>
  <hr />
  <br />
  <form
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="username"
        onChange={undefined}
        placeholder="Enter a username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="email"
        onChange={undefined}
        placeholder="Enter an email address"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="password"
        onChange={undefined}
        placeholder="Enter a password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <input
      className="btn btn-primary btn-lg btn-block"
      type="sumit"
      value="Submit"
    />
  </form>
</div>
`;
